Bug 793210 - Make proxy [[GetOwnProperty]] throw appropriately for non-extensible target. (r=jorendorff)